[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
description = "Your DevOps familiar for automation, scripting, and cloud orchestration"
license = "MIT"
authors = ["ghostkellz"]
repository = "https://github.com/ghostkellz/sigil"
keywords = ["devops", "automation", "cli", "scripting", "cloud"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
